# OSNET_RDK_X5

./: 02_preprocess.sh  03_build.sh  OSNet_x0_25_config.yaml  README.md  READMR.MD  data_preprocess.py  export_osnet_to_onnx.py  osnet_onnx_inference.py  osnet_pytorch_inference.py  osnet_rdk_x5_inference.py  resize_img_to_256x128.py  模型量化部署.md
osnet_cpp/: CMakeLists.txt  main.cc  osnet-config.cmake.in
